chore: error fixes

--- a/Template.Api/Properties/launchSettings.json
+++ b/Template.Api/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "ScvAgritech.Notifications.Api": {
+    "Template.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
