--- a/Template.Api/Dockerfile
+++ b/Template.Api/Dockerfile
@@ -5,16 +5,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Com.Sanduk.Api/Com.Sanduk.Api.csproj", "Com.Sanduk.Api/"]
-RUN dotnet restore "Com.Sanduk.Api/Com.Sanduk.Api.csproj"
+COPY ["Template.Api/Template.Api.csproj", "Template.Api/"]
+RUN dotnet restore "Template.Api/Template.Api.csproj"
 COPY . .
-WORKDIR "/src/Com.Sanduk.Api"
-RUN dotnet build "Com.Sanduk.Api.csproj" -c Release -o /app/build
+WORKDIR "/src/Template.Api"
+RUN dotnet build "Template.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Com.Sanduk.Api.csproj" -c Release -o /app/publish
+RUN dotnet publish "Template.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Com.Sanduk.Api.dll"]
+ENTRYPOINT ["dotnet", "Template.Api.dll"]
