--- a/Template.Api/Template.Api.csproj
+++ b/Template.Api/Template.Api.csproj
@@ -38,6 +38,7 @@
         <ProjectReference Include="..\Template.Application\Template.Application.csproj" />
         <ProjectReference Include="..\Template.Domain\Template.Domain.csproj" />
         <ProjectReference Include="..\Template.Infrastructure\Template.Infrastructure.csproj" />
+        <ProjectReference Include="..\Template.Common\Template.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
