--- a/Template.Application/Template.Application.csproj
+++ b/Template.Application/Template.Application.csproj
@@ -1,23 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-        <PackageReference Include="CsvHelper" Version="28.0.1" />
-        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
-        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.0" />
-        <PackageReference Include="MailKit" Version="3.3.0" />
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.6" />
-        <PackageReference Include="MimeKit" Version="3.4.0" />
-        <PackageReference Include="RestSharp" Version="106.13.0" />
-        <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+        <PackageReference Include="MediatR" Version="12.2.0" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
     </ItemGroup>
 
     <ItemGroup>
