--- a/Template.Api/appsettings.json
+++ b/Template.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DATBASE_CON": "Server=localhost\\SQLEXPRESS;Database=Scv.Notifications;Trusted_Connection=True",
+  "DATABASE_CON": "Server=localhost\\SQLEXPRESS;Database=Template.Api;Trusted_Connection=True",
   "AppSettings": {
     "LogUrl": "http://localhost:5341",
     "Authority": "",
